# bevy_sorting

./: Cargo.toml  README.md
src/: automagic.rs  lib.rs  markers.rs  ordering.rs  tests.rs
src/automagic/: tests.rs
