[package]
name = "bevy_sorting"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE"
description = "Sorting bevy systems based on reads and writes"
readme = "README.md"
homepage = "https://github.com/Kordyjan/bevy_sorting"
repository = "https://github.com/Kordyjan/bevy_sorting"

keywords = ["gamedev", "bevy", "ecs", "sorting", "systems"]
categories = ["game-development"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
bevy = "0.15.2"
bevy_utils_proc_macros = "0.15.3"
impl-trait-for-tuples = "0.2.3"
tynm = "0.1.10"

[dev-dependencies]
assert_unordered = "0.3.5"

